--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,21 +41,23 @@
               formControlName="name"
               class="form-control">
 
-								<p class="invalid-feedback" *ngIf="registrationForm.get('name').invalid">
-									Please enter a name.</p>
+								<p class="invalid-feedback" *ngIf="registrationForm.get('name').invalid">Please enter a
+									name.
+								</p>
 							</div>
-
-
 						</div>
 					</div>
 				</div>
 
 				<!-- Submit Button -->
 				<button type="submit" [disabled]="!registrationForm.valid" class="btn btn-danger btn-lg btn-block">{{this.idx!=-1? 'Edit':'Submit'}}</button>
+
+
 			</form><!-- Form ends -->
 
 		</div>
 	</div>
+
 
 	<div class="row">
 		<div class="col-xs-6 col-md-6">
